--- a/template/contact.html
+++ b/template/contact.html
@@ -5,6 +5,7 @@
   <title>SDA practice- Contact us</title>
 </head>
 <body>
+  <h2>Contact us</h2>
 <p>SDA system, <br/> Tallinn, <br> Eesti.  </p>
 
 </body>
