--- a/template/homework1.html
+++ b/template/homework1.html
@@ -3,12 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Homework</title>
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
+{
+background-color: lightblue;
+}
+
   <h1>Homework</h1>
   <h2>Task 1. Websites</h2>
 
-  <h3 style=color:#FF0000;>List of unusual search engines of books and science from which content not indexed by google</h3>
+  <h3 style=color:#FF0000;><em>List of unusual search engines of books and science from which content not indexed by google</em></h3>
 
   <p><a href="https://refseek.com">refseek.com</a></p>
   <p><a href="https://worldcat.org">worldcat.org</a></p>
