--- a/template/index.html
+++ b/template/index.html
@@ -2,47 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="author" content="Vinod John">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SDA school system</title>
+  <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+
 </head>
 <body>
 <div id="main-page">
+  <header>
     <div id="menu">
-        <a href="contact.html">Contact us</a>
+      <a href="contact.html">Contact us</a>
+    </div>
+  </header>
+  <div id="greeting">
+    <h1>Hello, User!</h1>
+    <p>Welcome to SDA system!<br/>Here you can find more <span style="color: red">schedules and lessons</span> of SDA.</p>
+    <p><i>Today is a great day.</i><b>It's nice to meet you again!</b></p>
+
+    <div id="image-block" class="hide-me">
+      <a href="https://www.oracle.com" target="_blank">
+        <img src="../assets/images/java12.jpg" alt="Java Code Picture" height="450" width="800"/>
+      </a>
+
+      <a href="https://www.twitter.com" target="_blank">
+        Twitter
+      </a>
+      <audio src="/mio.mp3"></audio>
+      <video src="/video.mp4" width="400" height="200"></video>
+    </div>
+  </div>
+  <div id="course-list">
+    <h3>Courses:</h3>
+    <ul>
+      <li>Java
+        <ol>
+          <li>Fundamentals</li>
+          <li>Advanced features</li>
+          <li>Practical project</li>
+        </ol>
+      </li>
+      <li>Python</li>
+      <li>Angular</li>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
+
+    <h3>Languages:</h3>
+    <ol>
+      <li>Java
+        <ul>
+          <li class="bold-orange underline-me">Spring</li>
+          <li>Vaadin</li>
+          <li>Apache</li>
+        </ul>
+      </li>
+      <li>C++</li>
+      <li>C</li>
+      <li>Scala</li>
+    </ol>
+  </div>
+  <footer>
+    This site belongs to SDA Developer.
+  </footer>
+
+
+
+
+  <section id="hot-news">
+    <header>
+      <h3 class="bold-orange">Hot news</h3>
+    </header>
+
+    <div id="left-block">
+
+    </div>
+    <div id="right-block">
+
     </div>
 
-
-  <a href="contact.html">Contact us</a>
-  <h1> Hello user!</h1>
-  <p>Welcome to SDA system!<br/>Here you can do your webpage</p>
-  <p>Today is fine day</></p>
-
-  <img src="../assets/images/java.jpg" alt="Java Code Picture" height="450" width="800"/>
-
-  <br>
-  <a href="https://facebook.com" target="_blank">Facebook</a>
-  </br>
-
-  <br>
-  <img src="../assets/images/java12.jpg" alt="Java Code Picture" height="250" width="500"/>
-  </br>
-
-  <br>
-  <a href="https://neti.ee" target="_blank">Neti.ee searching system</a>
-  </br>
-
-
-
-  <a href="https://facebook.com" target="_blank">
-    <img src="../assets/images/java12.jpg" alt="Java Code Picture" height="250" width="500"/>
-
-
-
-
-
-
-
-
-
-
+    <footer>
+      <i>Updated every 5 minutes.</i>
+    </footer>
+  </section>
+</div>
 </body>
 </html>
