--- a/template/subscription-form-exercise.html
+++ b/template/subscription-form-exercise.html
@@ -14,7 +14,7 @@
 <body>
     <h1>Subscription Form</h1>
     <p>
-      <h3><em>I would like to subscribe to</em></h3>
+      <h1><em>I would like to subscribe to</em></h1>
     </p>
 
     <table style="width:50%">
@@ -55,7 +55,7 @@
 
     <p>Name:...............................................................................Last name:...............................................................................</p>
     <br/><br/>
-    <p>Deliver adress</p>?
+    <p>Deliver adress</p>
 
 
 </body>
