--- a/template/user-registration.html
+++ b/template/user-registration.html
@@ -10,10 +10,10 @@
   <p>Enter the details below</p>
   <form id="signup" name="signup" method="post" action="index.html">
     <label for="first-name">First name:</label>
-    <input name="first-name" id="first-name" type="text" value="Vinod" readonly minlength="3" maxlength="25"/>
+    <input name="first-name" id="first-name" type="text" value="Priit" readonly minlength="3" maxlength="25"/>
     <br/><br/>
     <label for="last-name">Last name:</label>
-    <input name="last-name" id="last-name" type="text" value="John"/>
+    <input name="last-name" id="last-name" type="text" value="Enno"/>
     <br/><br/>
     <label for="email">Email:</label>
     <input name="email" id="email" type="email" required placeholder="abc@sda.ee"/>
@@ -22,8 +22,7 @@
     <input name="password" id="password" type="password" required/>
     <br/><br/>
     <label for="male">Gender:</label>
-    <input type="radio" id="male" name="gender"/> Male
-    <input type="radio" id="female" name="gender" checked/> Female
+      <input type="radio" id="female" name="gender" checked/> Female
     <br/><br/>
     <label for="mathematics">Favourite subjects:</label>
     <input type="checkbox" id="mathematics" name="favorite-subjects"/> Mathematics
