--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -354,6 +354,8 @@
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
 
+  <p *ngFor="let fruit of fruits">{{ fruit }}</p>
+
   <div class="card-container">
     <a class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"/></svg>
@@ -422,6 +424,8 @@
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
       <span>Build for Production</span>
     </button>
+
+    <button class="card card-small" (mouseover)="showAlertBox()">Click me!</button>
   </div>
 
   <!-- Terminal -->
