--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -354,9 +354,9 @@
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
 
-  <p *ngFor="let fruit of fruits">{{ fruit }}</p>
 
-  <div class="card-container">
+
+  <div *ngIf="toShow" class="card-container">
     <a class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"/></svg>
       <span>Learn Angular</span>
@@ -425,7 +425,16 @@
       <span>Build for Production</span>
     </button>
 
-    <button class="card card-small" (mouseover)="showAlertBox()">Click me!</button>
+    <button class="card card-small" (click)="showAlertBox()">Click me!</button>
+    <button class="card card-small" (click)="addDog()">Add dog</button>
+  </div>
+
+  <div>
+    <ul>
+      <li *ngFor="let dog of doggies">{{ dog.name }}</li>
+    </ul>
+
+    <p *ngIf="doggies.length <= 2">Who let the dogs out</p>
   </div>
 
   <!-- Terminal -->
