--- a/src/app/cat/cat.component.html
+++ b/src/app/cat/cat.component.html
@@ -1,5 +1,5 @@
 <h1>List of cats</h1>
-<table>
+<table border="1">
   <thead>
   <tr>
     <th>Name</th>
@@ -8,7 +8,7 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let cat in cats">
+  <tr *ngFor="let cat of cats">
     <td>{{ cat.name }}</td>
     <td>{{ cat.type }}</td>
     <td>{{ cat.color }}</td>
