--- a/src/app/dog-form/dog-form.component.html
+++ b/src/app/dog-form/dog-form.component.html
@@ -6,18 +6,17 @@
 </div>
 
 
-
-<div id="dogFormDiv">
+<div id="dogFormDiv" *ngIf="isShowForm">
   <h3>Add a new dog</h3>
   <form id="dogForm" #dogForm="ngForm" (ngSubmit)="addDog(dogForm)">
     <label for="name">Dog name:</label>
     <input type="text" name="name" id="name" [(ngModel)]="name" />
     <br/>
-    <label for="type">Type</label>
-    <input type="text" name="type" id="type" [ngModel]="type" />
+    <label for="type">Type:</label>
+    <input type="text" name="type" id="type" [(ngModel)]="type"/>
     <br/>
     <label for="property">Property:</label>
-    <input type="text" name="property" id="property" [ngModel]="property" />
+    <input type="text" name="property" id="property" [(ngModel)]="property"/>
     <br/>
     <button type="submit">Add dog</button>
   </form>
